--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="">
+	<meta name="viewport" content="width=device width, initial-scale=1.0">
 	<title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>The weather is beautiful today</h1>
 </body>
 </html>
